Add scripts, log affinity